app/kustomize/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: test-flux-app-service
spec:
  type: ClusterIP
  selector:
    app: test-flux-app
  ports:
  - port: 3000
    protocol: TCP
    targetPort: 3000
    name: http
  sessionAffinity: None
